# MarketResearchCrewAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
app/: agents.py  crew_runner.py  main.py  prompts.py  schemas.py  tasks.py  tools.py
tests/: mainTest.py
