[project]
name = "crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.1",
    "crewai-tools>=1.6.1",
    "fastapi>=0.123.7",
    "litellm>=1.80.7",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.38.0",
]
